@@ -245,24 +245,29 @@ cupsdNetIFUpdate(void)
       else if (addr->ifa_addr->sa_family == AF_INET &&
                lis->address.addr.sa_family == AF_INET &&
                (lis->address.ipv4.sin_addr.s_addr &
-	           temp->mask.ipv4.sin_addr.s_addr) ==
-	               temp->address.ipv4.sin_addr.s_addr)
+	        temp->mask.ipv4.sin_addr.s_addr) ==
+	           (temp->address.ipv4.sin_addr.s_addr &
+		    temp->mask.ipv4.sin_addr.s_addr))
         match = 1;
 #ifdef AF_INET6
       else if (addr->ifa_addr->sa_family == AF_INET6 &&
                lis->address.addr.sa_family == AF_INET6 &&
                (lis->address.ipv6.sin6_addr.s6_addr[0] &
-	           temp->mask.ipv6.sin6_addr.s6_addr[0]) ==
-	               temp->address.ipv6.sin6_addr.s6_addr[0] &&
+	        temp->mask.ipv6.sin6_addr.s6_addr[0]) ==
+		   (temp->address.ipv6.sin6_addr.s6_addr[0] &
+		    temp->mask.ipv6.sin6_addr.s6_addr[0]) &&
                (lis->address.ipv6.sin6_addr.s6_addr[1] &
-	           temp->mask.ipv6.sin6_addr.s6_addr[1]) ==
-	               temp->address.ipv6.sin6_addr.s6_addr[1] &&
+	        temp->mask.ipv6.sin6_addr.s6_addr[1]) ==
+		   (temp->address.ipv6.sin6_addr.s6_addr[1] &
+		    temp->mask.ipv6.sin6_addr.s6_addr[1]) &&
                (lis->address.ipv6.sin6_addr.s6_addr[2] &
-	           temp->mask.ipv6.sin6_addr.s6_addr[2]) ==
-	               temp->address.ipv6.sin6_addr.s6_addr[2] &&
+	        temp->mask.ipv6.sin6_addr.s6_addr[2]) ==
+		   (temp->address.ipv6.sin6_addr.s6_addr[2] &
+		    temp->mask.ipv6.sin6_addr.s6_addr[2]) &&
                (lis->address.ipv6.sin6_addr.s6_addr[3] &
-	           temp->mask.ipv6.sin6_addr.s6_addr[3]) ==
-	               temp->address.ipv6.sin6_addr.s6_addr[3])
+	        temp->mask.ipv6.sin6_addr.s6_addr[3]) ==
+		   (temp->address.ipv6.sin6_addr.s6_addr[3] &
+		    temp->mask.ipv6.sin6_addr.s6_addr[3]))
         match = 1;
 #endif /* AF_INET6 */
 
@@ -284,8 +289,8 @@ cupsdNetIFUpdate(void)
 
     cupsArrayAdd(NetIFList, temp);
 
-    cupsdLogMessage(CUPSD_LOG_DEBUG, "cupsdNetIFUpdate: \"%s\" = %s...",
-                    temp->name, temp->hostname);
+    cupsdLogMessage(CUPSD_LOG_DEBUG, "cupsdNetIFUpdate: \"%s\" = %s:%d",
+                    temp->name, temp->hostname, temp->port);
   }
 
   freeifaddrs(addrs);
